umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_se.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "Se#n2#u2"} :bonds [] :charge 0 :spin "#u2 #s3"}} :counts {:success true :output {:atoms {"0" "Se#n3"} :bonds [] :charge 0 :spin "#u0 #s1"}}}
