umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_sn.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {:atoms ["Sn#n#u2"] :bonds [] :charge 0 :spin "#u2#s3"}
    :success true}
  :counts {:output {:atoms ["Sn#n2"] :bonds [] :charge 0 :spin "#u0#s1"} :success true}}
