umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_sr.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["Sr#n"] :bonds []} :success true}
  :counts {:output {:atoms ["Sr#n"] :bonds []} :success true}}
